--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "google-auth-library": "^7.9.2",
+    "jose": "^3.17.0",
+    "jsrsasign": "^10.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.41.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
